--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.5",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
+    "css-loader": "6.8.1",
+    "md5": "^2.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -28,7 +31,9 @@
     "@angular-devkit/build-angular": "^16.2.16",
     "@angular/cli": "^16.2.16",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~4.3.0",
+    "@types/md5": "^2.3.5",
     "jasmine-core": "^5.7.1",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
@@ -36,6 +41,6 @@
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
     "prettier": "^3.5.3",
-    "typescript": "~5.1.3"
+    "typescript": "5.1.6"
   }
 }
