--- a/angular.json
+++ b/angular.json
@@ -33,8 +33,16 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              {
+                "glob": "*.svg",
+                "input": "./node_modules/bootstrap-icons/",
+                "output": "./assets/icons"
+              },
+              {
+                "input": "src",
+                "output": "/",
+                "glob": "favicon.ico"
+              }
             ],
             "styles": [
               "src/styles.scss"
@@ -100,10 +108,13 @@
               "src/assets"
             ],
             "styles": [
-            "node_modules/bootstrap/dist/css/bootstrap.css",
-  "src/styles.scss"
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "src/styles.scss",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           }
         }
       }
